# drone-controller

./: .gitignore  CTRL_C_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MOCK_DRONE_README.md  PORT_CONFIGURATION_GUIDE.md  README.md  SETUP.md  SIGNAL_HANDLING_FIX.md  SIMULATOR_REDESIGN.md  USAGE_EXAMPLES.md  WINDOWS_MIGRATION_SUMMARY.md  WINDOWS_SETUP.md  debug_tello.py  drone_dance.py  drone_simulator.py  example_swarm_test.py  main.py  mock_tello_drone.py  pyproject.toml  quick_test.py  setup-dev.ps1  setup.bat  setup.ps1  simple_mock_tello.py  test_keep_alive.py  test_mock_drone.py  test_port_config.py  test_signal_handling.py  test_udp.py  validate.py  working_example.py
config/: drone_config.yaml
djitellopy/: tello.py
emergency_stop/: EMERGENCY_STOP_README.md  emergency_stop_ui.py  requirements.txt  run_emergency_stop.bat  run_emergency_stop.ps1  run_emergency_stop.sh
examples/: basic_flight.py  enhanced_swarm_demo.py  swarm_formation_demo.py  synchronized_takeoff_demo.py
iot/: ACTION_EXECUTOR_REWRITE_SUMMARY.md  Manage-IoTService.ps1  README_TELLO.md  README_WINDOWS.md  Start-TelloIoTClient.ps1  TELLO_IMPLEMENTATION_SUMMARY.md  TOOLCALL_FORMAT_GUIDE.md  action_executor.py  aws_iot_drone_schema.json  aws_iot_examples.md  create_deploy_package.sh  create_virtual_env.sh  pubsub.py  requirements.txt  run_iot_client.bat  run_iot_client.ps1  run_iot_client.sh  run_tello_iot_client.py  settings.yaml  settings_windows.yaml  tello_action_executor.py  tello_swarm_config.json  tello_swarm_iot_client.py  tools.py
iot/certifications/: drone_1.cert.pem  drone_1.private.key
simulator/: README.md  README_UDP.md  demo.html  example_usage.py  improved_localhost_simulator.py  index.html  integration_example.py  localhost_simulator.py  simple_udp_simulator.py  simulator_bridge.py  start_simulator.bat  start_simulator.ps1  start_simulator.py  start_udp_simulator.py  styles.css  udp_simulator.py
simulator/js/: DroneModel.js  DroneSimulator.js  Environment.js  FormationManager.js  PhysicsEngine.js  SwarmManager.js  UI.js  main.js
src/drone_controller/: __init__.py
src/drone_controller/core/: __init__.py  tello_drone.py
src/drone_controller/multi_robot/: __init__.py  formation_manager.py  swarm_controller.py
src/drone_controller/utils/: __init__.py  config_manager.py  error_handler.py  logging_utils.py
tests/: test_basic.py
webapp/: .gitignore  CLEAN_STRUCTURE.md  FINAL_RESET_TEST.md  PORT_CONFIGURATION.md  PROJECT_STRUCTURE.md  README.md  RESET_TEST_GUIDE.md  Test-Connectivity.ps1  Test-WSLConnectivity.ps1  configure_ports.ps1  configure_ports.sh  get_local_ip.ps1  get_wsl_ip.sh  mock_drone.py  mock_tello_drone.py  requirements.txt  start_simulator.bat  start_simulator.ps1  start_simulator.sh  start_simulator_emoji.ps1  web_server.py  websocket_server.py
webapp/static/css/: style.css
webapp/static/js/: app.js  drone-simulator.js  three-scene.js  websocket-client.js
webapp/templates/: index.html
