[project]
name = "drone-controller"
version = "0.1.0"
description = "Multi-robot Tello Talent drone control system with formation flying and swarm coordination Server."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Drone Controller Project", email = "cywong@vtc.edu.hk"}
]
keywords = ["drone", "tello", "robotics", "swarm", "formation", "multi-robot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
license = {text = "MIT"}
dependencies = [
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pyyaml>=6.0.2",
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "websockets>=10.0",
    "asyncio-mqtt>=0.11.0",
    "aiofiles>=23.0.0",
    "python-socketio>=5.8.0",
    "av>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
webapp = [
    "matplotlib>=3.10.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["webapp"]
py-modules = ["main"]

[project.scripts]
drone-controller = "main:main"

[project.urls]
Homepage = "https://github.com/your-username/drone-controller"
Repository = "https://github.com/your-username/drone-controller"
Documentation = "https://github.com/your-username/drone-controller/wiki"
"Bug Tracker" = "https://github.com/your-username/drone-controller/issues"
